# src/models/index.ts
@@ -2,3 +2,4 @@ export * from './Category';
 export * from './Product';
 export * from './User';
 export * from './Order';
+export * from './Wishlist';
